tests/rascal/negative/type_errors/L1/19_expression_ES10_D4_2.ob
MODULE Test19;
VAR
  y: INTEGER;
  q: BOOLEAN;
  x: INTEGER;
  p: BOOLEAN;
  z: INTEGER;
  r: BOOLEAN;

BEGIN
               q := ((1 >= (1223 DIV (+ 1223))) & (((2 + y) = 2) OR (2 <= 2)));
               p := (((x DIV (- x)) MOD 2) > x);
               z := 1223;
               y := (+ z);
               p := r;
               r := (0 < (200 DIV x));
               y := 200;
               r := r;
  (* error *)  p := ((~ ((p DIV x) > (0 + 1223))) & p);
               p := ((((x DIV x) - (y - z)) DIV 1223) <= 0)
END Test19.